--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <header>
             <button>Click me</button>
         </header>
-<div id="content"></div>
+<div id="content">
+    
+</div>
 
 <script src="script.js"></script>
     </body>
